# Quadbit

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Quadbit.sln  README.md  commands.json
Examples/Testing/: CMakeLists.txt
Examples/Testing/Source/: Testing.cpp  Testing.h
Examples/Voxels/: CMakeLists.txt  Voxels.vcxproj  Voxels.vcxproj.filters  imgui.ini
Examples/Voxels/Resources/Models/: Tree.vox
Examples/Voxels/Source/: Infinitum.cpp  Infinitum.h  Main.cpp
Examples/Voxels/Source/Data/: Components.h  Defines.h
Examples/Voxels/Source/Systems/: MeshGenerationSystem.h  PlayerMovementSystem.h  ThirdPersonCameraSystem.h  VoxelGenerationSystem.h
Examples/Voxels/Source/Utils/: CommonUtils.h  MagicaVoxImporter.h  TerrainTools.h  VoxImporter.h  VoxelMesher.h
Examples/Water/: CMakeLists.txt  Water.vcxproj  Water.vcxproj.filters  imgui.ini
Examples/Water/Resources/Shaders/: compileshaders.bat  skybox_frag.glsl  skybox_vert.glsl  water_frag.glsl
Examples/Water/Resources/Shaders/Compiled/: precalc_comp.spv  skybox_frag.spv
Examples/Water/Source/: Water.cpp  Water.h
Quadbit/: CMakeLists.txt  Quadbit.vcxproj  Quadbit.vcxproj.filters  imgui.ini
Quadbit/Dependencies/EASTL/include/EASTL/: chrono.h
Quadbit/Dependencies/glm/: CMakeLists.txt  LICENSE
Quadbit/Dependencies/tinygltf/include/tinygltf/: rapidjson-amalgamation.h
Quadbit/Resources/: default_vert.glsl
Quadbit/Resources/Shaders/: compileshaders.bat  default_frag.glsl  displacement_comp.glsl  ifft_comp.glsl  imgui_frag.glsl  imgui_vert.glsl  mesh_frag.glsl  mesh_vert.glsl  precalc_comp.glsl  shadowmap_vert.glsl  water_frag.glsl  water_vert.glsl  waveheight_comp.glsl  waveheights.comp.glsl
Quadbit/Resources/Shaders/Compiled/: default_frag.spv  default_vert.spv  displacement_comp.spv  ifft_comp.spv  ifft_comp_subgroups.spv  imgui_frag.spv  imgui_vert.spv  mesh_frag.spv  mesh_vert.spv  precalc_comp.spv  shadowmap_vert.spv  sign_correction_comp.spv  water_frag.spv  water_vert.spv  waveheight_comp.spv  waveheights.comp.spv
Quadbit/Resources/Textures/: boat.dds  default_skybox.ktx  encoded_sunset_skybox.ktx
Quadbit/Source/: Main.cpp
Quadbit/Source/Engine/API/: Compute.h  Graphics.cpp  Graphics.h
Quadbit/Source/Engine/Application/: InputHandler.cpp  InputHandler.h  Window.cpp  Window.h
Quadbit/Source/Engine/Core/: Entry.h  InputHandler.h  Logging.h  MathHelpers.h  QbEntityDefs.h  QbRenderDefs.h  QbVulkanDefs.h  QbVulkanInternalDefs.h  Sfinae.h  Time.h
Quadbit/Source/Engine/DataStructures/: SparseSet.cpp  SparseSet.h
Quadbit/Source/Engine/Entities/: Component.cpp  Component.h  ComponentPool.h  ComponentSystem.h  EntitiesCommon.h  Entity.cpp  Entity.h  EntityDefines.h  EntityManager.cpp  EntityManager.h  EntityTypes.h  EventTag.h  InternalTypes.h  SparseSet.h  SystemDispatch.h
Quadbit/Source/Engine/Global/: ImGuiState.h  InputHandler.h  Time.h
Quadbit/Source/Engine/Physics/: PhysicsComponents.h  PhysicsWorld.cpp  PhysicsWorld.h  PxCompat.h
Quadbit/Source/Engine/Physics/Systems/: PositionUpdateSystem.h
Quadbit/Source/Engine/Rendering/: Camera.cpp  Camera.h  QbVkRenderer.cpp  QbVkRenderer.h  QbVulkanUtils.h  RenderTypes.h  Renderer.cpp  Renderer.h  VulkanTypes.h  VulkanUtils.h
Quadbit/Source/Engine/Rendering/Common/: QbVkCommon.h  QbVkDefines.h  QbVkUtils.h
Quadbit/Source/Engine/Rendering/Geometry/: Icosphere.h  Plane.h
Quadbit/Source/Engine/Rendering/Memory/: Pool.cpp  Pool.h  QbVkAllocator.cpp  QbVkAllocator.h  QbVkPool.cpp  QbVkPool.h  ResourceManager.cpp  ResourceManager.h
Quadbit/Source/Engine/Rendering/Pipelines/: ComputePipeline.cpp  ComputePipeline.h  ImGuiPipeline.cpp  ImGuiPipeline.h  MeshPipeline.cpp  MeshPipeline.h  PBRPipeline.cpp  PBRPipeline.h  Pipeline.cpp  Pipeline.h  PipelinePresets.h  SkyPipeline.cpp  SkyPipeline.h
Quadbit/Source/Engine/Rendering/Shaders/: ShaderCompiler.h  ShaderInstance.cpp  ShaderInstance.h
Quadbit/Source/Engine/Rendering/Systems/: NoClipCameraSystem.h
Quadbit/Source/Game/: Infinitum.cpp  Infinitum.h  Water.cpp  Water.h
Quadbit/Source/Game/Data/: Components.h  Defines.h
Quadbit/Source/Game/Systems/: MeshGenerationSystem.h  PlayerMovementSystem.h  ThirdPersonCameraSystem.h  VoxelGenerationSystem.h
Quadbit/Source/PCH/: PCH.h
examples/Testing/: CMakeLists.txt
examples/Testing/src/: Game.cpp  Game.h  Main.cpp  Testing.cpp  Testing.h
examples/Voxels/: CMakeLists.txt
examples/Voxels/Resources/Shaders/: voxel_vert.glsl
examples/Voxels/Source/Systems/: PlayerMovementSystem.h  ThirdPersonCameraSystem.h
examples/Voxels/src/: Infinitum.cpp  Infinitum.h  Main.cpp
examples/Voxels/src/Data/: Components.h
examples/Voxels/src/Systems/: MeshGenerationSystem.h  PlayerMovementSystem.h  ThirdPersonCameraSystem.h  VoxelGenerationSystem.h
examples/Voxels/src/Utils/: MagicaVoxImporter.h  VoxelMesher.h
examples/Water/: CMakeLists.txt
examples/Water/resources/Shaders/: water_frag.glsl  water_vert.glsl
examples/Water/src/: Main.cpp  Water.cpp  Water.h
quadbit/: CMakeLists.txt
quadbit/dependencies/EASTL/: CMakeLists.txt
quadbit/dependencies/SPIRV-Cross/: CMakeLists.txt
quadbit/dependencies/imgui/: CMakeLists.txt
quadbit/resources/: frag.spv  vert.spv
quadbit/src/Engine/API/: Compute.cpp  Compute.h  Graphics.cpp  Graphics.h
quadbit/src/Engine/Application/: InputHandler.cpp  InputHandler.h  Window.cpp  Window.h
quadbit/src/Engine/Core/: Entry.cpp  Entry.h  Game.h  InputHandler.h  Logging.h  QbEntityDefs.h  QbInputDefs.h  QbRenderDefs.h  QbVulkanDefs.h  QbVulkanInternalDefs.h  Sfinae.h  Time.h  TinygltfImpl.cpp
quadbit/src/Engine/Entities/: ComponentSystem.h  EntityManager.cpp  EntityManager.h  EntityTypes.h  QbEntityDefs.h  SparseSet.h  SystemDispatch.h
quadbit/src/Engine/Global/: ImGuiState.h
quadbit/src/Engine/Rendering/: Pipeline.cpp  Pipeline.h  PipelinePresets.h  QbVkRenderer.cpp  QbVkRenderer.h  QbVkShaderInstance.cpp  QbVkShaderInstance.h  QbVkUtils.h  QbVulkanUtils.h  RenderTypes.h  Renderer.cpp  Renderer.h  ShaderBytecode.h  ShaderInstance.cpp  ShaderInstance.h  VulkanTypes.h  VulkanUtils.h
(+45 files in other folders)
